--- a/ServiceHttps/src/app/app.component.html
+++ b/ServiceHttps/src/app/app.component.html
@@ -4,5 +4,6 @@
     Welcome to My {{ title }}!
   </h1>
 </div>
-
+<employee-list></employee-list>
+<employee-details></employee-details>
 <router-outlet></router-outlet>
