--- a/ServiceHttps/src/app/app.component.html
+++ b/ServiceHttps/src/app/app.component.html
@@ -4,6 +4,6 @@
     Welcome to My {{ title }}!
   </h1>
 </div>
-<employee-list></employee-list>
-<employee-details></employee-details>
+<app-employee-list></app-employee-list>
+<app-employee-details></app-employee-details>
 <router-outlet></router-outlet>
